# episodiq

./: .env.example  .env.test.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.test.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/demo_eval/: 01_seed_train.sh  02_grid_search.sh  03_cluster.sh  04_annotate.sh  05_build_paths.sh  06_tune.sh  06b_tune_signals.sh  07_rebuild_paths.sh  08_train_dead_end.sh  09_seed_eval.sh  10_eval.sh  README.md  eval_metrics.py  mock_server.py  reseed_failed.py  seed_via_proxy.py  signal_auc.py  token_efficiency.py
episodiq/: __init__.py  logging.py  utils.py
episodiq/analytics/: __init__.py  log_builder.py  path_frequency.py  path_state.py  transition_analyzer.py  transition_types.py
episodiq/api_adapters/: __init__.py  anthropic.py  base.py  mixins.py  openai.py  trajectory_handler.py
episodiq/cli/: __main__.py  annotate.py  cluster.py  db.py  dead_end.py  env.py  main.py  report.py  start.py  tune.py
episodiq/clustering/: __init__.py  assigner.py  clusterer.py  constants.py  grid_search.py  manager.py  path_updater.py  pipeline.py  saver.py  updater.py
episodiq/config/: __init__.py  config.py  dead_end_defaults.py  embedder_config.py
episodiq/inference/: __init__.py  embedder.py
episodiq/server/: app.py  factory.py  management.py
episodiq/workflows/: __init__.py  base.py  context.py  pipelines.py  trajectory_manager.py
tests/: conftest.py  helpers.py  in_memory_repos.py  test_utils.py
tests/analytics/: test_dead_end.py  test_log_builder.py  test_path_frequency.py  test_path_frequency_tuner.py  test_path_state.py  test_prefetch_topk.py  test_signal_tuner.py  test_transition_analyzer.py
tests/api_adapters/: test_canonical_message.py  test_config.py
tests/cli/: test_rendering.py  test_report.py
tests/clustering/: test_assigner.py  test_clusterer.py  test_grid_search.py  test_manager.py  test_path_updater.py  test_pipeline_integration.py  test_saver.py  test_updater.py
tests/server/: test_factory.py  test_management.py
tests/storage/: test_repository.py
tests/workflows/: test_forward_pipeline.py  test_trajectory_manager.py  test_workflow.py
(+64 files in other folders)
